salesforce-main/src/main/default/objects/Application_wizard_reference__c/Application_wizard_reference__c.object-meta.xml
<CustomObject>
    <label>Application wizard reference</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Application wizard references 	  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application wizard references</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>