salesforce-main/src/main/default/objects/Application_wizard_reference__c/fields/Address_Line2__c.field-meta.xml
<CustomField>
    <fullName>Address_Line2__c</fullName>
    <label>Address Line2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>