salesforce-main/src/main/default/objects/Application_wizard_reference__c/fields/Application_wiz__c.field-meta.xml
<CustomField>
    <fullName>Application_wiz__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application wizard</label>
    <referenceTo>Application_wizard__c</referenceTo>
    <relationshipLabel>Application wizard references</relationshipLabel>
    <relationshipName>Application_wizard_references</relationshipName>
    <type>Lookup</type>
</CustomField>