salesforce-main/src/main/default/objects/Application_wizard_reference__c/fields/iteration__c.field-meta.xml
<CustomField>
    <fullName>iteration__c</fullName>
    <label>iteration</label>
    <length>2</length>
    <type>Text</type>
</CustomField>