salesforce-main/src/main/default/objects/Application_wizard_reference__c/fields/Personal_Statement__c.field-meta.xml
<CustomField>
    <fullName>Personal_Statement__c</fullName>
    <label>Personal Statement</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>