salesforce-main/src/main/default/objects/Application_wizard_reference__c/fields/reference_city__c.field-meta.xml
<CustomField>
    <fullName>reference_city__c</fullName>
    <label>reference city</label>
    <length>40</length>
    <type>Text</type>
</CustomField>