salesforce-main/src/main/default/objects/Application_wizard_reference__c/fields/Reference_country__c.field-meta.xml
<CustomField>
    <fullName>Reference_country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference country</label>
    <referenceTo>country_list__c</referenceTo>
    <relationshipLabel>Application wizard references</relationshipLabel>
    <relationshipName>Application_wizard_references</relationshipName>
    <type>Lookup</type>
</CustomField>