salesforce-main/src/main/default/objects/Application_wizard_reference__c/fields/reference_date__c.field-meta.xml
<CustomField>
    <fullName>reference_date__c</fullName>
    <label>reference date</label>
    <type>Date</type>
</CustomField>