salesforce-main/src/main/default/objects/Application_wizard_reference__c/fields/Reference_email__c.field-meta.xml
<CustomField>
    <fullName>Reference_email__c</fullName>
    <label>Reference email</label>
    <type>Email</type>
</CustomField>