salesforce-main/src/main/default/objects/Application_wizard_reference__c/fields/Reference_name__c.field-meta.xml
<CustomField>
    <fullName>Reference_name__c</fullName>
    <label>Reference name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>