salesforce-main/src/main/default/objects/Application_wizard_reference__c/fields/Reference_Position__c.field-meta.xml
<CustomField>
    <fullName>Reference_Position__c</fullName>
    <label>Reference Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>