salesforce-main/src/main/default/objects/Application_wizard_reference__c/fields/reference_postal__c.field-meta.xml
<CustomField>
    <fullName>reference_postal__c</fullName>
    <label>reference postal</label>
    <length>20</length>
    <type>Text</type>
</CustomField>