salesforce-main/src/main/default/objects/Application_wizard_reference__c/fields/Reference_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Reference_State_Province__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference State/Province</label>
    <referenceTo>State_Province__c</referenceTo>
    <relationshipLabel>Application wizard references</relationshipLabel>
    <relationshipName>Application_wizard_references</relationshipName>
    <type>Lookup</type>
</CustomField>