salesforce-main/src/main/default/objects/Application_wizard_reference__c/fields/reference_street__c.field-meta.xml
<CustomField>
    <fullName>reference_street__c</fullName>
    <label>reference street</label>
    <length>250</length>
    <type>Text</type>
</CustomField>