salesforce-main/src/main/default/objects/Application_wizard_reference__c/fields/reference_telephone__c.field-meta.xml
<CustomField>
    <fullName>reference_telephone__c</fullName>
    <label>reference telephone</label>
    <type>Phone</type>
</CustomField>